--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 <body>
 
   <header>
-
+    <h1>Il mio Viaggio a Londra</h1>
+    <span><img src="./img/pexels-bill-emrich-230794-0.jpg" alt="londra-0" title="londra"></span>
+    <span><img src="./img/pexels-bill-emrich-230794-1.jpg" alt="londra-1" title="londra"></span>
+    <span><img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londra-2" title="londra"></span>
+    <hr>
   </header>
 
   <main>
@@ -16,7 +20,7 @@
   </main>
 
   <footer>
-    
+
   </footer>
   
 </body>
