--- a/index.html
+++ b/index.html
@@ -16,7 +16,80 @@
   </header>
 
   <main>
+    <section>
+      <h2>Le mie spese</h2>
+      <table>
+        <tr>
+          <thead>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+          </thead>
+        </tr>
+          <tbody>
+            <tr>
+              <td>1</td>
+              <td>Biglietto Aereo</td>
+              <td>120&euro;</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Biglietto Aereo</td>
+              <td>120&euro;</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>Biglietto Aereo</td>
+              <td>120&euro;</td>
+            </tr>
+          </tbody>
+          <tfoot>
+            <tr>
+              <td>Totale</td>
+              <td></td>
+              <td>360&euro;</td>
+            </tr>
+          </tfoot>
+      </table>
+      <hr>
+    </section>
 
+    <section>
+      <h3>Cose da fare</h3>
+      <ul>
+        <li>Visitare la Tower of London</li>
+        <li>Visitare greenwich</li>
+        <li>Ascoltare un artista di strada a Convent Garden</li>
+        <li>Mangiare il tipico Fish and Chips inglese</li>
+      </ul>
+      <hr>
+    </section>
+
+    <section>
+      <h3>Info utili:</h3>
+      <ol>
+        <li>Numeri utili di emergenza
+          <ul>
+            <li><strong>999</strong> - Emergenza</li>
+            <li><strong>101</strong> - Numero polizia</li>
+            <li><strong>111</strong> - Numero assistenza medica</li>
+          </ul>
+        </li>
+        <li>Hotel
+          <ul>
+            <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+            <li><strong>Indirizzo hotel:</strong> Westminister, London SW1.A.1AA, Regno Unito</li>
+          </ul>
+        </li>
+        <li>Aereo
+          <ul>
+            <li><strong>Volo di Andata:</strong> YI234X, ore 9.30 da Milano Malpensa</li>
+            <li><strong>Volo di Ritorno:</strong> YI236X, ore 18.30 da London Hearthrow</li>
+          </ul>
+        </li>
+      </ol>
+      <hr>
+    </section>
   </main>
 
   <footer>
