--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <section>
       <h3>Cose da fare</h3>
       <ul>
-        <li>Visitare la Tower of London</li>
-        <li>Visitare greenwich</li>
-        <li>Ascoltare un artista di strada a Convent Garden</li>
-        <li>Mangiare il tipico Fish and Chips inglese</li>
+        <li>Visitare la Tower of London &#10005;</li>
+        <li>Visitare greenwich &#10003;</li>
+        <li>Ascoltare un artista di strada a Convent Garden &#10003;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10005;</li>
       </ul>
       <hr>
     </section>
