aggiunto-footer-e-commenti

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <hr>
   </header>
 
+<!-- Inizio sezione principale -->
   <main>
     <section>
       <h2>Le mie spese</h2>
@@ -91,9 +92,16 @@
       <hr>
     </section>
   </main>
+<!-- fine sezione principale -->
 
   <footer>
-
+    <h3>Le foto</h3>
+    <span>
+      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">
+    </span>
+    <span>
+      <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n">
+    </span>
   </footer>
   
 </body>
