--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 
   <header>
     <h1>Il mio Viaggio a Londra</h1>
-    <span><img src="./img/pexels-bill-emrich-230794-0.jpg" alt="londra-0" title="londra"></span>
-    <span><img src="./img/pexels-bill-emrich-230794-1.jpg" alt="londra-1" title="londra"></span>
-    <span><img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londra-2" title="londra"></span>
+    <span>
+      <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="londra-0" title="londra">
+    </span>
+    <span>
+      <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="londra-1" title="londra">
+    </span>
+    <span>
+      <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londra-2" title="londra">
+    </span>
     <hr>
   </header>
 
