piccola modifica alle immagini footer

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
   <footer>
     <h3>Le foto</h3>
     <span>
-      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">
+      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="londra-foto" title="londra-foto">
     </span>
     <span>
-      <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n">
+      <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="londra-foto" title="londra-foto">
     </span>
   </footer>
   
