--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <header>
     <h1>Il mio Viaggio a Londra</h1>
     
-      <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="londra-0" title="londra">
-      <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="londra-1" title="londra">
-      <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londra-2" title="londra">
+    <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="londra-0" title="londra">
+    <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="londra-1" title="londra">
+    <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="londra-2" title="londra">
    
     <hr>
   </header>
@@ -48,8 +48,7 @@
           </tbody>
           <tfoot>
             <tr>
-              <td>Totale</td>
-              <td></td>
+              <td colspan="2">Totale</td>
               <td>360&euro;</td>
             </tr>
           </tfoot>
@@ -71,20 +70,23 @@
     <section>
       <h3>Info utili:</h3>
       <ol>
-        <li>Numeri utili di emergenza
+        <li>
+          <span>Numeri utili di emergenza</span>
           <ul>
             <li><strong>999</strong> - Emergenza</li>
             <li><strong>101</strong> - Numero polizia</li>
             <li><strong>111</strong> - Numero assistenza medica</li>
           </ul>
         </li>
-        <li>Hotel
+        <li>
+          <span>Hotel</span>
           <ul>
             <li><strong>Nome hotel:</strong> Buckingham Palace</li>
             <li><strong>Indirizzo hotel:</strong> Westminister, London SW1.A.1AA, Regno Unito</li>
           </ul>
         </li>
-        <li>Aereo
+        <li>
+          <span>Aereo</span>
           <ul>
             <li><strong>Volo di Andata:</strong> YI234X, ore 9.30 da Milano Malpensa</li>
             <li><strong>Volo di Ritorno:</strong> YI236X, ore 18.30 da London Hearthrow</li>
@@ -98,8 +100,8 @@
 
   <footer>
     <h3>Le foto</h3>
-      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="londra-foto" title="londra-foto">
-      <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="londra-foto" title="londra-foto">
+    <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="londra-foto" title="londra-foto">
+    <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="londra-foto" title="londra-foto">
   </footer>
   
 </body>
